2010-04-06  Jarkko Sakkinen  <jarkko.j.sakkinen@gmail.com>

Reviewed by Laszlo Gombos.

        [Qt] WebKit does not build on Windows with --3d-canvas
        https://bugs.webkit.org/show_bug.cgi?id=37026

        * platform/graphics/GraphicsContext3D.h:
        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3D::getActiveAttrib):
        (WebCore::GraphicsContext3D::getActiveUniform):

git-svn-id: svn://svn.chromium.org/blink/trunk@57174 bbb929c8-8fbe-4397-9dbb-9b2b20218538